--- a/app/views/pages/search.ejs
+++ b/app/views/pages/search.ejs
@@ -5,9 +5,9 @@
             <form action="/pages/search" method="GET" id="search">
                 <label><%= lang['views.search.infoTxt'] %> </label>
                 <input type="text" name="query" autofocus  value="" placeholder="<%= lang['views.search.inputInfoTxt'] %>"><br><br>
-                <% if(typeof session.flash.errors != "undefined" && session.flash.errors.query) { %>
+                <% if(typeof flash.errors != "undefined" && flash.errors.query) { %>
                     <div class="query-exists">        
-                        <%= session.flash.errors.query %>
+                        <%= flash.errors.query %>
                     </div>
                 <% } %>
                 <button type="submit"><h3><%= lang['views.search.nameBtn'] %></h3></button>
