--- a/app/views/pages/search.ejs
+++ b/app/views/pages/search.ejs
@@ -5,25 +5,23 @@
             <form action="/pages/search" method="GET" id="search">
                 <label><%= lang['views.search.infoTxt'] %> </label>
                 <input type="text" name="query" autofocus  value="" placeholder="<%= lang['views.search.inputInfoTxt'] %>"><br><br>
-                <% if(typeof flash.errors != "undefined" && flash.errors.query) { %>
+                <% if(typeof session.flash.errors != "undefined" && session.flash.errors.query) { %>
                     <div class="query-exists">        
-                        <%= flash.errors.query %>
+                        <%= session.flash.errors.query %>
                     </div>
                 <% } %>
                 <button type="submit"><h3><%= lang['views.search.nameBtn'] %></h3></button>
             </form>
         </div>
-
-        <div class="success-search">
-            <% if(req.query.query) { %>
-                <div class="">
-                    <%= lang['success.search.result'] %> <%= req.query.query %>
-                </div>
-            <% } %>
-        </div>
-
-        <div class="div-search-result">
-            <% if (typeof articles != "undefined" ) { %>
+        <% if (typeof articles != "undefined" ) { %>
+            <div class="success-search">
+                <% if(req.query.query) { %>
+                    <div class="">
+                        <%= lang['success.search.result'] %> <%= req.query.query %>
+                    </div>
+                <% } %>
+            </div>
+            <div class="div-search-result">
                 <% articles.forEach(function(article) { %>
                     <div class="info-article">
                         <a href="/articles/show/<%= article.slug %>/<%= article._id %>"><br>
@@ -43,9 +41,9 @@
                             <a href="/articles/show/<%= article.slug %>/<%= article._id %>"><%= lang['views.articles.commentArticleTxt'] %></a><br><br><br>
                         </div>
                     </div>    
-                <% }); %>  
-            <% } %> 
-        </div>
+                <% }); %> 
+            </div> 
+        <% } %>     
     </div>
 </div>
 <%- include('../includes/footer') %>
