--- a/app/views/auth/register.ejs
+++ b/app/views/auth/register.ejs
@@ -7,17 +7,25 @@
           <%= lang['views.register.registrationTxt'] %> 
         </div><br><br>
         <%= lang['views.usernameTxt'] %><br>   
-          <input type="text" name="username" value="<% if(typeof flash.success != "undefined" && flash.success.username) { %><%= flash.success.username %><% } %>"><br>
+          <input type="text" name="username" value="<% if(typeof flash.lastIntroduced != "undefined" && flash.lastIntroduced.username) { %><%= flash.lastIntroduced.username %><% } %>"><br>
           <% if(typeof flash.errors != "undefined" && flash.errors.username) { %>
             <div class="username-exists">
               <%= flash.errors.username %>
-            </div>
-          <% } else if(typeof flash.errors != "undefined" && flash.success.usernameIsNotOccupied) { %>
+            </div><br>
+          <% } else if(typeof flash.success != "undefined" && flash.success.username) { %>
             <div class="username-free">
-                <%= flash.success.usernameIsNotOccupied %>
+                <%= flash.success.username %>
             </div>
-          <% } else if(typeof flash.errors != "undefined" && flash.erorrs.username){ %>
-            <%= flash.errors.username %>
+          <% } %>
+          <% if(typeof flash.success != "undefined" && flash.success.proposedUsername) { %>
+            <div class="proposedUsername">
+              <%= flash.success.proposedUsername %>
+            </div>
+          <% } %>
+          <% if(typeof flash.freeUsername != "undefined" && flash.freeUsername.username) { %>
+            <div class="freeUsername">
+              <%= flash.freeUsername.username %>
+            </div>
           <% } %>
           <br>
           <%= lang['views.passwordTxt'] %><br>
@@ -37,7 +45,7 @@
           <% } %>
           <br><br>
           <%= lang['views.nameTxt'] %><br>
-          <input type="text" name="name" value="<% if(typeof flash.success  != "undefined" && flash.success.name) { %><%= flash.success.name %><% } %>">
+          <input type="text" name="name" value="<% if(typeof flash.lastIntroduced  != "undefined" && flash.lastIntroduced.name) { %><%= flash.lastIntroduced.name %><% } %>">
           <% if(typeof flash.errors != "undefined" && flash.errors.name) { %>
             <div class="isMissingName">   
               <%= flash.errors.name %>  
@@ -45,7 +53,7 @@
           <% } %>
           <br><br>
           <%= lang['views.surnameTxt'] %><br>
-          <input type="text" name="surname" value="<% if(typeof flash.success  != "undefined" && flash.success.surname) { %><%= flash.success.surname %><% } %>">
+          <input type="text" name="surname" value="<% if(typeof flash.lastIntroduced  != "undefined" && flash.lastIntroduced.surname) { %><%= flash.lastIntroduced.surname %><% } %>">
           <% if(typeof flash.errors != "undefined" && flash.errors.surname) { %>
             <div class="isMissingFathersname">           
               <%= flash.errors.surname %>            
@@ -53,7 +61,7 @@
           <% } %>
           <br><br>
           <%= lang['views.register.egnTxt'] %><br>
-          <input type="text" name="egn" value="<% if(typeof flash.success  != "undefined" && flash.success.egn) { %><%= flash.success.egn %><% } %>">
+          <input type="text" name="egn" value="<% if(typeof flash.lastIntroduced  != "undefined" && flash.lastIntroduced.egn) { %><%= flash.lastIntroduced.egn %><% } %>">
           <% if(typeof flash.errors != "undefined" && flash.errors.egn) { %>
             <div class="isMissingEgn">        
               <%= flash.errors.egn %>           
@@ -61,7 +69,7 @@
           <% } %>
           <br><br>
           <%= lang['views.townTxt'] %><br>
-          <input type="text" name="town" value="<% if(typeof flash.success  != "undefined" && flash.success.town) { %><%= flash.success.town %><% } %>"><br>
+          <input type="text" name="town" value="<% if(typeof flash.success  != "undefined" && flash.lastIntroduced.town) { %><%= flash.lastIntroduced.town %><% } %>"><br>
           <% if(typeof flash.errors != "undefined" && flash.errors.town) { %>
             <div class="isMissingTown">        
               <%= flash.errors.town %>        
@@ -69,7 +77,7 @@
           <% } %>
           <br>
           <%= lang['views.register.streetTxt'] %><br>
-          <input type="text" name="street" value="<% if(typeof flash.success  != "undefined" && flash.success.street) { %><%= flash.success.street %><% } %>"><br>
+          <input type="text" name="street" value="<% if(typeof flash.lastIntroduced  != "undefined" && flash.lastIntroduced.street) { %><%= flash.lastIntroduced.street %><% } %>"><br>
           <% if(typeof flash.errors != "undefined" && flash.errors.street) { %>
             <div class="isMissingStreet">           
               <%= flash.errors.street %>         
@@ -77,7 +85,7 @@
           <% } %>
           <br>
           <%= lang['views.previousJobTxt'] %><br>
-          <input type="text" name="previousJob" value="<% if(typeof flash.success  != "undefined" && flash.success.previousJob) { %><%= flash.success.previousJob %><% } %>"><br>
+          <input type="text" name="previousJob" value="<% if(typeof flash.lastIntroduced  != "undefined" && flash.lastIntroduced.previousJob) { %><%= flash.lastIntroduced.previousJob %><% } %>"><br>
           <% if(typeof flash.errors != "undefined" && flash.errors.previousJob) { %>
             <div class="isMissingPreviousJob">         
               <%= flash.errors.previousJob %>          
@@ -85,7 +93,7 @@
           <% } %>
           <br>
           <%= lang['views.worksAsTxt'] %><br>
-          <input type="text" name="worksAs" value="<% if(typeof flash.success  != "undefined" && flash.success.worksAs) { %><%= flash.success.worksAs %><% } %>"><br>
+          <input type="text" name="worksAs" value="<% if(typeof flash.lastIntroduced  != "undefined" && flash.lastIntroduced.worksAs) { %><%= flash.lastIntroduced.worksAs %><% } %>"><br>
           <% if(typeof flash.errors != "undefined" && flash.errors.worksAs) { %>
             <div class="isMissingWorksAs">        
               <%= flash.errors.worksAs %>      
